[gd_scene load_steps=44 format=2]

[ext_resource path="res://Contenedores/Tablas/TablaHorarios.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pantallas/PantallaPadre.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Montserrat-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Recursos/Montserrat-SemiBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Recursos/Montserrat-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Recursos/Iconos/bxs-spreadsheet-icon1.png" type="Texture" id=6]
[ext_resource path="res://Contenedores/Tablas/TablaNotasBoletin.tscn" type="PackedScene" id=7]
[ext_resource path="res://Recursos/Iconos/bxs-calendar-icon.png" type="Texture" id=8]
[ext_resource path="res://Recursos/Iconos/bxs-medal-icon.png" type="Texture" id=9]
[ext_resource path="res://Recursos/Iconos/bxs-spreadsheet-icon2.png" type="Texture" id=10]
[ext_resource path="res://Recursos/Iconos/bxs-log-out-icon.png" type="Texture" id=11]
[ext_resource path="res://Contenedores/Tablas/TablaCuotas.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=5]
resource_name = "despliegue_menu_lateral"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PanelLateral:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -260, 76 ), Vector2( 0, 76 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "repliegue_menu_lateral"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PanelLateral:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 76 ), Vector2( -260, 76 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.196078, 0.211765, 0.980392, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 6
border_width_top = 4
border_width_right = 4
border_width_bottom = 2
border_color = Color( 0.254902, 0.223529, 0.223529, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=46]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=47]
bg_color = Color( 0.184314, 0.823529, 1, 1 )

[sub_resource type="DynamicFont" id=36]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=63]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=64]
bg_color = Color( 0.0431373, 0.368627, 0.843137, 1 )

[sub_resource type="StyleBoxFlat" id=65]
bg_color = Color( 0.0392157, 0.345098, 0.792157, 1 )

[sub_resource type="StyleBoxFlat" id=66]
bg_color = Color( 0.0509804, 0.431373, 0.992157, 1 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.184314, 0.823529, 1, 1 )

[sub_resource type="DynamicFont" id=52]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=49]
font_path = "res://Recursos/Montserrat-Bold.ttf"

[sub_resource type="DynamicFont" id=50]
size = 20
font_data = SubResource( 49 )

[sub_resource type="StyleBoxFlat" id=51]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )

[sub_resource type="DynamicFont" id=23]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.054902, 0.294118, 0.341176, 0.823529 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.0392157, 0.211765, 0.25098, 0.823529 )
border_width_left = 5
border_width_top = 6
border_width_right = 5
border_width_bottom = 3
border_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.054902, 0.294118, 0.341176, 0.823529 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0392157, 0.211765, 0.25098, 0.823529 )
border_width_left = 5
border_width_top = 6
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.054902, 0.294118, 0.341176, 0.823529 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )

[sub_resource type="DynamicFont" id=24]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.670588, 0.121569, 0.121569, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.670588, 0.121569, 0.121569, 1 )
border_width_left = 5
border_width_top = 6
border_width_right = 5
border_width_bottom = 3
border_color = Color( 0.968627, 0.160784, 0.160784, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.827451, 0.141176, 0.141176, 1 )

[node name="PantallaPadre" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRectFondo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.184314, 0.823529, 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/despliegue_menu_lateral = SubResource( 5 )
anims/repliegue_menu_lateral = SubResource( 6 )

[node name="PanelSuperior" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 76.0
custom_styles/panel = SubResource( 4 )

[node name="ButtonMenuDesplegable" type="Button" parent="PanelSuperior"]
margin_left = 13.0
margin_top = 2.0
margin_right = 85.0
margin_bottom = 74.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 6 )
icon_align = 1

[node name="LabelEPT" type="Label" parent="PanelSuperior"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -226.5
margin_top = 15.0
margin_right = 226.5
margin_bottom = 58.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Educar para transformar"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="PanelSuperior"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
margin_top = 74.0
margin_bottom = 78.0

[node name="PanelHorario" type="Panel" parent="."]
visible = false
anchor_left = 0.068
anchor_top = 0.127
anchor_right = 0.938
anchor_bottom = 1.0
margin_left = 62.44
margin_top = 34.84
margin_right = -73.9601
margin_bottom = -41.0
custom_styles/panel = SubResource( 46 )

[node name="TablaHorarios" parent="PanelHorario" instance=ExtResource( 1 )]

[node name="PanelBienvenida" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 449.0
margin_top = 316.0
margin_right = -449.0
margin_bottom = -240.0
custom_styles/panel = SubResource( 47 )

[node name="LabelBienvenida" type="Label" parent="PanelBienvenida"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -49.0
margin_right = 260.0
margin_bottom = -11.0
custom_fonts/font = SubResource( 36 )
text = "Bienvenido, @Nombre @Apellido"
align = 1
valign = 1

[node name="PanelNotas" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 449.0
margin_top = 316.0
margin_right = -449.0
margin_bottom = -240.0
custom_styles/panel = SubResource( 47 )

[node name="TablaNotasBoletin" parent="PanelNotas" instance=ExtResource( 7 )]

[node name="PanelCuotas" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 449.0
margin_top = 316.0
margin_right = -449.0
margin_bottom = -240.0
custom_styles/panel = SubResource( 47 )

[node name="LabelCuotas" type="Label" parent="PanelCuotas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -415.0
margin_right = 260.0
margin_bottom = -359.0
custom_fonts/font = SubResource( 36 )
text = "Cuotas de:"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="PanelCuotas"]
anchor_top = -0.099
anchor_right = 1.0
anchor_bottom = 1.073
margin_top = -0.123997
margin_bottom = -0.252014

[node name="TablaCuotas" parent="PanelCuotas/Panel" instance=ExtResource( 12 )]

[node name="ButtonIS" type="Button" parent="PanelCuotas/Panel"]
visible = false
anchor_left = 0.857143
anchor_top = 0.871634
anchor_right = 0.98728
anchor_bottom = 0.969354
margin_left = -3.05176e-05
margin_top = 0.816864
margin_right = -6.10352e-05
margin_bottom = 0.816864
rect_min_size = Vector2( 0, 60 )
focus_previous = NodePath("../TextEditContrasenha")
custom_fonts/font = SubResource( 63 )
custom_styles/hover = SubResource( 64 )
custom_styles/pressed = SubResource( 65 )
custom_styles/normal = SubResource( 66 )
text = "Pagar"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PanelSeleccionHorario" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 449.0
margin_top = 316.0
margin_right = -449.0
margin_bottom = -240.0
custom_styles/panel = SubResource( 35 )

[node name="LabelMaterias" type="Label" parent="PanelSeleccionHorario"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -310.0
margin_top = -241.0
margin_right = 292.0
margin_bottom = -179.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 52 )
text = "Seleccione hijo"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="PanelSeleccionHorario"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -178.0
margin_right = 203.0
margin_bottom = -107.0

[node name="OptionButton" type="OptionButton" parent="PanelSeleccionHorario/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 50 )
custom_styles/normal = SubResource( 51 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PanelSeleccionNotas" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 449.0
margin_top = 316.0
margin_right = -449.0
margin_bottom = -240.0
custom_styles/panel = SubResource( 35 )

[node name="LabelMaterias" type="Label" parent="PanelSeleccionNotas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -310.0
margin_top = -241.0
margin_right = 292.0
margin_bottom = -179.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 52 )
text = "Seleccione hijo"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="PanelSeleccionNotas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -178.0
margin_right = 203.0
margin_bottom = -107.0

[node name="OptionButton" type="OptionButton" parent="PanelSeleccionNotas/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 50 )
custom_styles/normal = SubResource( 51 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PanelSeleccionCuotas" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 449.0
margin_top = 316.0
margin_right = -449.0
margin_bottom = -240.0
custom_styles/panel = SubResource( 35 )

[node name="LabelMaterias" type="Label" parent="PanelSeleccionCuotas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -310.0
margin_top = -241.0
margin_right = 292.0
margin_bottom = -179.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 52 )
text = "Seleccione hijo"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="PanelSeleccionCuotas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -178.0
margin_right = 203.0
margin_bottom = -107.0

[node name="OptionButton" type="OptionButton" parent="PanelSeleccionCuotas/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 50 )
custom_styles/normal = SubResource( 51 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PanelLateral" type="Panel" parent="."]
anchor_right = 0.132
anchor_bottom = 0.886
margin_left = -260.0
margin_top = 76.0
margin_right = -259.44
margin_bottom = 123.12
custom_styles/panel = SubResource( 29 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelLateral"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -3.0
margin_bottom = -820.0
custom_constants/separation = 5

[node name="ButtonHorarios" type="Button" parent="PanelLateral/VBoxContainer"]
margin_right = 247.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 19 )
custom_styles/normal = SubResource( 30 )
text = " Horarios"
icon = ExtResource( 8 )
align = 0

[node name="ButtonNotas" type="Button" parent="PanelLateral/VBoxContainer"]
margin_top = 53.0
margin_right = 247.0
margin_bottom = 101.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 20 )
custom_styles/normal = SubResource( 31 )
text = " Notas"
icon = ExtResource( 9 )
align = 0

[node name="ButtonCuotas" type="Button" parent="PanelLateral/VBoxContainer"]
margin_top = 106.0
margin_right = 247.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 20 )
custom_styles/normal = SubResource( 31 )
text = " Cuotas"
icon = ExtResource( 10 )
align = 0

[node name="HSeparator" type="HSeparator" parent="PanelLateral/VBoxContainer"]
margin_top = 159.0
margin_right = 247.0
margin_bottom = 163.0

[node name="ButtonSalir" type="Button" parent="PanelLateral/VBoxContainer"]
margin_top = 168.0
margin_right = 247.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 24 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 22 )
custom_styles/normal = SubResource( 14 )
text = "Salir"
icon = ExtResource( 11 )

[node name="HTTPRequestNotas" type="HTTPRequest" parent="."]

[node name="HTTPRequestHijos" type="HTTPRequest" parent="."]

[node name="HTTPRequestHorarios" type="HTTPRequest" parent="."]

[node name="HTTPRequestCuotas" type="HTTPRequest" parent="."]

[connection signal="pressed" from="PanelSuperior/ButtonMenuDesplegable" to="." method="_on_ButtonMenuDesplegable_pressed"]
[connection signal="item_selected" from="PanelSeleccionHorario/Panel/OptionButton" to="." method="_on_horarios_item_selected"]
[connection signal="item_selected" from="PanelSeleccionNotas/Panel/OptionButton" to="." method="_on_notas_item_selected"]
[connection signal="item_selected" from="PanelSeleccionCuotas/Panel/OptionButton" to="." method="_on_OptionButtonCuotas_item_selected"]
[connection signal="pressed" from="PanelLateral/VBoxContainer/ButtonHorarios" to="." method="_on_ButtonHorarios_pressed"]
[connection signal="pressed" from="PanelLateral/VBoxContainer/ButtonNotas" to="." method="_on_ButtonNotas_pressed"]
[connection signal="pressed" from="PanelLateral/VBoxContainer/ButtonCuotas" to="." method="_on_ButtonCuotas_pressed"]
[connection signal="pressed" from="PanelLateral/VBoxContainer/ButtonSalir" to="." method="_on_ButtonSalir_pressed"]
[connection signal="request_completed" from="HTTPRequestNotas" to="." method="_on_Notas_request_completed"]
[connection signal="request_completed" from="HTTPRequestHijos" to="." method="_on_RequestHijos_request_completed"]
[connection signal="request_completed" from="HTTPRequestHorarios" to="." method="_on_Horarios_request_completed"]
[connection signal="request_completed" from="HTTPRequestCuotas" to="." method="_on_HTTPRequestCuotas_request_completed"]
